@@ -83,7 +83,7 @@ Usage: %s [-f] "OPT_CRYPT_S"[-d dir]\n\
 #define MIAU_STARTINGLOG	"miau version "VERSION" - starting log..."
 #define MIAU_CLOSINGLINK	"ERROR: Closing link: %s"
 #define MIAU_USERKILLED	"ERROR: "CLNT_DIE" %s"
-#define MIAU_LOGNOWRITE	"Cannot write to logfile (%s)!"
+#define MIAU_LOGNOWRITE	"Cannot write to logfile \"%s\"!"
 
 #define MIAU_VERSION	"- miau version "VERSION" - \""VERSIONNAME"\" -"
 #define MIAU_372_RUNNING	"- Running on server %s with nickname %s"
